--- a/App/app/src/main/res/layout/activity_profil.xml
+++ b/App/app/src/main/res/layout/activity_profil.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainTest">
+    tools:context=".Profil">
 
     <ImageButton
         android:id="@+id/imageButton2"
